# shivampr21.github.io

./: .nojekyll  README.md  _quarto.yml  about.html  about.qmd  index.html  index.md  index.qmd  index.xml  kernelized.html  kernelized.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
kernelized/: kernelized.html
posts/flash-30-3-2025-kernelized/: index.html  index.qmd
posts/flash-bwd-30-3-2025-kernelized/: index.html  index.qmd
posts/flash-bwd-pll-14-4-2025-kernelized/: index.html  index.qmd
posts/flash-fwd-pll-14-4-2025-kernelized/: index.html  index.qmd
posts/max-30-3-2025-kernelized/: index.html  index.qmd
posts/softmax-30-1-2025-kernelized/: index.html
posts/softmax-30-3-2025-kernelized/: index.html  index.qmd
site_libs/bootstrap/: bootstrap-52d64cd7e5369d8c55a9c2198456a32c.min.css  bootstrap-6c546f117f8b1973b5b116f31b54602b.min.css
src/shivampr21_github_io/: __init__.py
