[project]
name = "shivampr21-github-io"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ShivamPR21", email = "pandeyshivam2023robotics@gmail.com" }
]
dependencies = [
    "matplotlib>=3.8.4",
    "plotly>=5.21.0",
    "jupyter>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shivampr21_github_io"]
