[project]
name = "shivampr21-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ShivamPR21", email = "pandeyshivam2023robotics@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
shivampr21-github-io = "shivampr21_github_io:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
